--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -5,8 +5,7 @@
   justify-content: space-between;
   padding: 20px 0px;
   margin-bottom: -100px;
-  box-sizing: border-box;
-  position: fixed;
+  position: absolute;
   left: 50%;
   transform: translateX(-50%);
   top: 0;
@@ -15,13 +14,12 @@
 .header ul {
   font-size: 12px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin: 0;
   padding: 0;
   list-style: none;
-  column-gap: 40px;
-  row-gap: 8px;
-  align-items: end;
+  column-gap: 20px;
+  align-items: center;
 }
 .header ul li {
   margin-left: 0px;
